# Face_Detection_Using_OpenCV_and_OpenCL_in_CPlusPlus

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  execConcurrent.cpp  execConcurrent.hpp  main.cpp  utility.h
